# BACE

./: .gitignore  README.md  generate_solutions.py  gpt5.jsonl  main.py  mock_run.py  pyproject.toml  qwen2.5-coder:14b.jsonl_results.jsonl  qwen2.5-coder:7b.jsonl  requirements-dev.txt  requirements.txt  run_batch.sh  test.ipynb
Experiments/notebooks/: test.ipynb
Experiments/notebooks/agentcoder_plus/: agents.ipynb  analysing_iter.ipynb
Experiments/notebooks/bayesian/: bayesian_coevolution_sample_problem.ipynb  evolutionary_algorithm.ipynb  operators.ipynb  pareto.ipynb  series_convergence.ipynb  test.ipynb  test_script.py
Experiments/notebooks/coevolution/: gen_log_analyzer.ipynb  lcb_testblocks.ipynb  red_columns.ipynb  test_scenarios.ipynb
Experiments/notebooks/differential/: differentialtesting.ipynb
Experiments/notebooks/property/: property_testing.ipynb
Experiments/scripts/: AgentCoder_Class_Interaction_Diagram.md  agent_coder_generator.py  agent_coder_generator_refactored.py  agentcoder.py  evaluate_humaneval_subset.py  generate_humaneval_subset.py  generate_solutions.py  simple_generator.py  test_script.py  test_starter_codes.py
Experiments/scripts/coevolution/: README.md  iterative_edit.py  log_summary.py  run_batch.py  run_coevolution.py  run_mock.py  run_simple_coevolution.py  test_script.py
configs/: README.md
configs/datasets/: humaneval_ballerina.yaml  lcb.yaml
configs/experiments/: ablation-code-only.yaml  ablation-code-unittest.yaml  ablation-no-anchoring.yaml  ablation-no-differential.yaml  alternating-20gen.yaml  ballerina-code-only.yaml  code-only-test.yaml  default.yaml  init-prob-assignment.yaml  large-code-pop.yaml  passat1-no-evolution.yaml  property-public-code-only.yaml  property-public-code-warmup-5gen.yaml  property-tests.yaml  quick-differential-tests.yaml  quick-test.yaml
configs/infrastructure/: sandbox-default.yaml
configs/llm/: didula-qwen2.5-ballerina copy.yaml  didula-qwen2.5-ballerina.yaml  gemini-3-flash.yaml  gpt-4.yaml  gpt-5-mini.yaml  gpt-5.4.yaml  gpt-oss-120b.yaml  groq-gpt-oss-120b.yaml  qwen2.5-coder-7b.yaml  vertex-gpt-oss-120b.yaml
configs/profiles/code/: aggressive.yaml  fix_one_test.yaml  passat1.yaml  planning.yaml  standard.yaml
configs/profiles/differential/: README.md  standard.yaml
configs/profiles/property/: standard.yaml
configs/profiles/public/: standard.yaml
configs/profiles/unittest/: standard.yaml
configs/sandbox/: sandbox-default.yaml
configs/schedules/: alternating-10gen.yaml  alternating-20gen.yaml  alternating-6gen.yaml  code-only-3gen.yaml  code-only-5gen.yaml  no-evolution.yaml  quick-test.yaml  simultaneous-5.yaml
data/: README.md
data/generations/simple/: gpt-5-samples1-no-prompt.jsonl  gpt-5_subset20-samples1-no-prompt.jsonl  gpt-5_subset20-samples1-no-prompt.jsonl_results.jsonl  qwen2.5-coder_14b_subset20-samples1-no-prompt.jsonl  qwen2.5-coder_14b_subset20-samples1-no-prompt.jsonl_results.jsonl
data/human_eval/evaluations/: gpt-oss:20b.jsonl_results.jsonl  qwen2.5-coder:7b.jsonl_results.jsonl
data/human_eval/generations/: gpt-oss:20b.jsonl  qwen2.5-coder:14b.jsonl
experiments/notebooks/: test.ipynb
experiments/notebooks/agentcoder_plus/: agents.ipynb  analysing_iter.ipynb
experiments/notebooks/bayesian/: evolutionary_algorithm.ipynb  test.ipynb  test_script.py
experiments/notebooks/coevolution/: gen_log_analyzer.ipynb  lcb_testblocks.ipynb  lineag.ipynb  lineage_interactive.html  red_columns.ipynb  test_scenarios.ipynb
experiments/notebooks/datasets/: humaneval_bal.ipynb
experiments/notebooks/property/: property_testing.ipynb
experiments/scripts/: agent_coder_generator.py  bayesian_updates.py  cdas.py  direct.py  evaluate.py  evaluate_simulation.py  format_codesim_results.py  mathematical.py  modular.py  no_public_direct.py  plan_rewrite.py  planning.py  repeat.py  rewrite.py  run_simple_gpt5.zsh  simulate_lcb.py  test_script.py  test_starter_codes.py
experiments/scripts/baselines/: atd_me.py  bidirectional.py  cdas.py  crossover.py  direct.py  (+21 more)
src/: __init__.py
src/APR_research_wso2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/coevolution/: README.md  __init__.py  execution.py  factory.py  lcb_dataset.py  logging_utils.py  orchestrator_builder.py  orchestrator_config.py  probability_assigner.py  scheduling.py
src/common/: __init__.py  code_processor.py  coevolution_bayesian.py  config.py  llm_client.py  llm_factory.py  logging_utils.py  sandbox.py  sandbox_backup.py
src/infrastructure/: __init__.py  sandbox.py
tests/integration/: README.md  __init__.py  test_differential_workflow_e2e.py  test_dual_language_differential.py  test_groq_llm.py  test_lcb_stdin_differential.py  test_llm_operators_integration.py  test_orchestrator_integration.py  test_property_workflow_e2e.py  test_vertex_llm.py
tests/test_code_preprocessing/: test_analysis.py  test_composition.py  test_contains_starter_code.py  test_extraction.py  test_transformation.py
tests/test_coevolution/: __init__.py  test_bayesian_system.py  test_breeding_strategy.py  test_elite_selection.py  test_execution_system.py  test_failing_test_selection.py  test_feedback.py  test_lcb_dataset.py  test_ledger.py  test_llm_operators.py  test_orchestrator_builder.py  test_parent_selection.py  test_pareto_system.py  test_probability_assigner.py  test_selection_strategy.py
tests/test_common/: __init__.py  test_code_processor.py  test_has_close_elements.py  test_operator_validation.py  test_sandbox.py
tests/test_infrastructure/: __init__.py
(+455 files in other folders)
